documenting a lot of things
